@@ -1,3 +1,8 @@
+2003-08-19  Philippe Elie  <phil.el@wanadoo.fr>
+
+	* pp/opreport.cpp: really merge when --merge=lib and image name are
+	  specified.
+
 2003-08-16  Philippe Elie  <phil.el@wanadoo.fr>
 
 	* pp/opannotate.cpp: output threshold percent when necessary.
